# marlinspike

./: .dockerignore  .env.example  .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  README.md  SUITE-MANIFEST.yaml  _audit.py  _auth.py  _config.py  _models.py  _ms_engine.py  app.py  auth.py  config.py  deploy-dev.sh  deploy.sh  docker-compose.yml  marlinspike.py  models.py  releases-live.md  releases.md  requirements.txt  serve.py  setup_cython.py
.github/workflows/: ci.yml  release.yml
docs/: bronze-consumer-contract.md  extensibility-contracts.md  mitre-attack-guide.md  msbundle-format.md  public-fingerprint-corpus.md  repo-family.md  windows-installer-spec.md
docs/screenshots/: _mitre-doc-capture.mitre.json
msengine/: README.md  pyproject.toml
msengine/msengine/: __init__.py  __main__.py  engine.py
msengine/msengine/data/: oui.json
plugins/: __init__.py
plugins/marlinspike_mitre/: __init__.py  __main__.py  attack_catalog.py  plugin.py
presets/: README.md
rules/mitre/: base.yaml  ics-attack.yaml
scripts/: capture_mitre_screenshots.py  sync-mitre-bootstrap.sh  sync-msengine-bootstrap.sh  update-subtrees.sh  validate_bronze_passthrough.py
static/js/: CSS2DRenderer.js  OrbitControls.js
templates/: about.html  assets.html  audit.html  base.html  dashboard.html  diff.html  findings.html  landing.html  live.html  login.html  profile.html  projects.html  reports.html  scans.html  system.html  users.html  viewer.html
windows/: README.md  build-cross-bundle.py  build-cross-installer.sh  build-windows-bundle.ps1
(+14 files in other folders)
