[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "marlinspike-msengine"
version = "2.0.0"
description = "MarlinSpike passive OT/ICS analysis engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "River Risk Partners" }
]
keywords = ["ics", "ot", "pcap", "network-topology", "industrial-cybersecurity"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Security",
  "Topic :: System :: Networking :: Monitoring",
]
dependencies = []

[project.scripts]
msengine = "msengine.engine:main"
marlinspike-msengine = "msengine.engine:main"

[tool.setuptools]
packages = ["msengine"]

[tool.setuptools.package-data]
msengine = ["data/*.json"]
